@@ -360,10 +360,12 @@ CSHARP_BUILD		= ${CSHARP_WRAP}  ${CSHARP_ALL}
 CSHARP_CXX_FLAGS	= `${SWIG_LIBRETS_CONFIG} --cflags`
 CSHARP_DEMO_EXE		= ${CSHARP_GETOBJECT_EXE}				\
 				${CSHARP_METADATA_EXE}				\
+				${CSHARP_LOGGING_EXE}				\
 				${CSHARP_LOGIN_EXE}				\
 				${CSHARP_SEARCH_EXE}				
 CSHARP_DEMO_SRC		= ${CSHARP_GETOBJECT_SRC}				\
 				${CSHARP_METADATA_SRC}				\
+				${CSHARP_LOGGING_SRC}				\
 				${CSHARP_LOGIN_SRC}				\
 				${CSHARP_SEARCH_SRC}				
 CSHARP_DIR		= ${SWIG_DIR}/csharp
@@ -371,6 +373,8 @@ CSHARP_GENERATED_SRC	= ${wildcard ${CSHARP_OBJ_DIR}/*.cs}
 CSHARP_GETOBJECT_EXE	= ${CSHARP_OBJ_DIR}/GetObject.exe
 CSHARP_GETOBJECT_SRC	= ${CSHARP_DIR}/GetObject.cs
 CSHARP_INSTALL		= csharp_install
+CSHARP_LOGGING_EXE	= ${CSHARP_OBJ_DIR}/Logging.exe
+CSHARP_LOGGING_SRC	= ${CSHARP_DIR}/Logging.cs
 CSHARP_LOGIN_EXE	= ${CSHARP_OBJ_DIR}/Login.exe
 CSHARP_LOGIN_SRC	= ${CSHARP_DIR}/Login.cs
 CSHARP_MANAGED_DLL	= ${CSHARP_OBJ_DIR}/librets-dotnet.dll
@@ -416,6 +420,9 @@ ${CSHARP_GETOBJECT_EXE}:	${CSHARP_GETOBJECT_SRC}
 
 ${CSHARP_METADATA_EXE}:		${CSHARP_METADATA_SRC}
 	${MCS} -r:${CSHARP_MANAGED_DLL} -out:${CSHARP_METADATA_EXE} ${CSHARP_METADATA_SRC}
+
+${CSHARP_LOGGING_EXE}:		${CSHARP_LOGGING_SRC}
+	${MCS} -r:${CSHARP_MANAGED_DLL} -out:${CSHARP_LOGGING_EXE}  ${CSHARP_LOGGING_SRC}
 
 ${CSHARP_LOGIN_EXE}:		${CSHARP_LOGIN_SRC}
 	${MCS} -r:${CSHARP_MANAGED_DLL} -out:${CSHARP_LOGIN_EXE}  ${CSHARP_LOGIN_SRC}
