@@ -33,6 +33,13 @@ Version 1.2.2 - xx xxx 2008
     Modeled on patch supplied by Tony Manhollan.
     Ticket #67.
 
+  * Revised http logging methodology for SWIG bound languages and
+    updated developer documentation accordingly. For all SWIG languages,
+    RetsSession::SetHttpLogName("log.name") is all that is needed to 
+    invoke http logging. Legacy usage is still supported.
+
+  * Revised Librets-Version header to be "X-Librets-Version".
+
 Version 1.2.1 - 25 Jun 2008
 
   * Add Rets 1.7 support.
